# blog-gen

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup-wp.sh
app/: main.py
app/agents/: agent.py  content.py  humanize.py  orchestrator.py  publisher.py  research.py  seo.py  tools.py  vlog.py
app/api/: pages.py  routes.py
app/core/: auth.py  config.py
app/models/: schemas.py
app/services/: llm.py  progress.py  session.py  store.py
app/static/css/: main.css
app/static/js/: app.js  login.js
app/templates/: base.html
app/templates/pages/: app.html  login.html
